# smartpresence-ci

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  fix.js  main.cpp  start.sh
ai_service/: main.py  requirements.txt
libs/: sha256.h
public/: dashboard.html  index.html  reports.html  scan.html  session.html  students.html  teachers.html
public/assets/css/: main.css  scan.css
public/assets/js/: app.js  dashboard.js  scan.js  session.js  submitPresence_new.js
scripts/: get_sqlite3.ps1  install_mingw.ps1  install_mingw_auto.ps1
src/: auth.cpp  auth.h  database.cpp  database.h  handlers.cpp  handlers.h  qrcode.cpp  qrcode.h  router.cpp  router.h  seeder.cpp  seeder.h  server.cpp  server.h  shields.cpp  shields.h  sse.cpp  sse.h  utils.cpp  utils.h
